RESOLVED FIXED92403
[BlackBerry] InputHandler failure logs should be logAlways and critical.
https://bugs.webkit.org/show_bug.cgi?id=92403
Summary [BlackBerry] InputHandler failure logs should be logAlways and critical.
Mike Fenton
Reported 2012-07-26 11:22:54 PDT
SSIA.
Attachments
Patch (5.86 KB, patch)
2012-07-26 11:30 PDT, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-07-26 11:30:21 PDT
Rob Buis
Comment 2 2012-07-26 11:40:50 PDT
Comment on attachment 154699 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2012-07-26 13:02:29 PDT
Comment on attachment 154699 [details] Patch Clearing flags on attachment: 154699 Committed r123784: <http://trac.webkit.org/changeset/123784>
WebKit Review Bot
Comment 4 2012-07-26 13:02:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.