[BlackBerry] InputHandler failure logs should be logAlways and critical. https://bugs.webkit.org/show_bug.cgi?id=92403

Reviewed by Rob Buis.

Update Log level for failures and fix mask in log.

Reviewed Internally by Nima Ghanavatian.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::convertStringToWchar):
(BlackBerry::WebKit::convertStringToWcharVector):
(BlackBerry::WebKit::convertSpannableStringToString):
(BlackBerry::WebKit::InputHandler::spannableTextInRange):
(BlackBerry::WebKit::InputHandler::setTextAttributes):


Canonical link: https://commits.webkit.org/110220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123784 268f45cc-cd09-0410-ab3c-d52691b4dbfc